# dyno

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-18_release-roadmap.md
docs/: index.html
src/llama_dyno/: __init__.py  bench.py  cli.py  detect.py  lmstudio.py  ollama.py  report.py  submit.py  tune.py  types.py
tests/: conftest.py  test_backend_resolve.py  test_cli.py  test_detect.py  test_lmstudio.py  test_ollama.py  test_search.py  test_submit.py  test_tune.py
