[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-dyno"
version = "1.5.0"
description = "Auto-tune and benchmark llama.cpp / ik_llama.cpp inference on NVIDIA, AMD (ROCm), and Apple Silicon GPUs"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Flowdesk Systems", email = "lachy@flowdesk.systems" },
]
keywords = ["llama.cpp", "ollama", "lm-studio", "benchmark", "tuning", "gpu", "nvidia", "amd", "rocm", "apple-silicon", "metal", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Benchmark",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "nvidia-ml-py>=12.560.30",
]

[project.scripts]
dyno = "llama_dyno.cli:app"

[project.urls]
Homepage = "https://github.com/lachy/llama-dyno"
Repository = "https://github.com/lachy/llama-dyno"
Documentation = "https://github.com/lachy/llama-dyno#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_dyno"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
